<resources>
    <string name="app_name">QuindLogin</string>
    <string name="welcome">WELCOME</string>
    <string name="password">Password</string>
    <string name="emailaddress">Email address</string>
    <string name="forgotpasslog">Forgot password?</string>
    <string name="btnlog">LOG IN</string>
    <string name="paschange">Create new password</string>
    <string name="newpasssento">Check your email to create new password</string>
    <string name="okalert">OK</string>
    <string name="wlc">Welcome to Fake Home Page</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="unauthoriz">Unauthorized</string>
    <string name="doesntseem">This email is not registered. Please come to our local office to register for a polish.</string>
    <string name="resetpass">Reset password</string>
    <string name="respass">Please enter your email to reset password</string>
    <string name="enteremail">Email address</string>
    <string name="okemail">OK</string>
    <string name="cancelmail">CANCEL</string>
    <string name="setpass">Set Password</string>
    <string name="enternewpass">Type new password</string>
    <string name="confirmnewpass">Confirm new password</string>
    <string name="cancelnewpass">Cancel</string>
    <string name="oknewpass">Ok</string>
    <string name="passerr">Password error. Check your password and try again</string>
    <string name="mailerr">Email error. Check your email and try again</string>
</resources>
