<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_background"
    android:orientation="vertical">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="146dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/resetpass"
        android:textColor="@color/hitam"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="41dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/respass"
        android:textColor="@color/txtwarnalert"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_enteremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="41dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/merah"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/enteremail"
        android:textColor="@color/txtwarnalert"
        android:textColorHint="@color/txtwarnalert"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_cancelemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/cancelmail"
            android:textColor="@color/txtwarnalert" />


        <TextView
            android:id="@+id/tv_okmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/okemail"
            android:textColor="@color/txtwarnalert" />


    </LinearLayout>

</LinearLayout>