<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_background"
    android:orientation="vertical">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="146dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/setpass"
        android:textColor="@color/hitam"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/edt_enternewpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="41dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/merah"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/enternewpass"
        android:textColor="@color/txtwarnalert"
        android:textColorHint="@color/txtwarnalert"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_enterconfirmnewpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="41dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/merah"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/confirmnewpass"
        android:textColor="@color/txtwarnalert"
        android:textColorHint="@color/txtwarnalert"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_cancelnewpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/cancelnewpass"
            android:textColor="@color/txtwarnalert" />


        <TextView
            android:id="@+id/tv_oknewpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/oknewpass"
            android:textColor="@color/txtwarnalert" />


    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>